[package]
name = "trees"
description = "git worktrees simplified"
version = "1.0.0"
edition = "2024"

[[bin]]
name = "trees-bin"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.40", features = ["derive"] }
git2 = "0.20.2"
ff = { git = "https://github.com/jacbart/ff", branch = "main" }

[dev-dependencies]
assert_cmd = "2.0.12"
tempfile = "3.10.1"
predicates = "3.1.0"
